# Reputation-system-simulation

./: .gitignore  Cargo.toml  README.md  output_0  to_reduce.txt
runs/: info
runs/Emmulation run 2022-02-27T14:15:13.692188286Z/: reliability_maps.txt  start_reliability.txt
simulation_results/: simulation_3.json
src/: lib.rs  main.rs
src/evaluating_rep/: mod.rs  optimise.rs  stats.rs
src/examples/: evaluate_default_reliability_var.rs  evaluate_num_participants_var.rs  evaluate_num_users_var.rs  evaluate_reliability_threshold_var.rs  evaluate_reliability_var.rs  evaluate_runs_var.rs  evaluate_user_default_reliability_var.rs  evaluate_user_default_reputation_var.rs  evaluate_user_reliability_threshold_var.rs  evaluate_user_reputation_threshold_var.rs  evaluate_witness_floor_var.rs  mod.rs  run_moderate_sim.rs  run_simple_sim.rs
src/witness_rep/: mod.rs  quick_simulation.rs  simulation.rs
src/witness_rep/implementation/: generate_contract.rs  generate_sigs.rs  interaction.rs  quick_interaction.rs
src/witness_rep/interaction/: generate_contract.rs  generate_sigs.rs  interaction.rs  mod.rs  participant.rs  quick_interaction.rs  quick_transaction.rs  user_and_organization.rs
src/witness_rep/iota_did/: create_and_upload_did.rs
src/witness_rep/messages/: signatures.rs
src/witness_rep/transaction/: generate_contract.rs  generate_sigs.rs  mod.rs  participant.rs  quick_transaction.rs  transaction.rs
src/witness_rep/utility/: extract_msgs.rs  mod.rs  read_msgs.rs  verify_interaction.rs  verify_tx.rs
