[package]
name = "TSG-event-system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-score-generator = { git = "https://github.com/kianfay/trust-score-generator" }
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "dev", features = ["account"] }
iota-streams = { git = "https://github.com/iotaledger/streams", branch = "develop", version = "0.1.2"}
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", features = ["random","ed25519"], branch = "dev", version = "0.9.1"}
anyhow = "1.0.40"
tokio = {version = "1.5"}
rand = "0.7.3"
serde = "1.0.59"
serde_json = "1.0.59"
serde_bytes = "0.11.5"
sha2 = "0.10.1"
hex-literal = "0.3.4"
chrono = "0.4.19"
rustlearn = "0.5.0"